Finish move of testing stuff to own module.